# archinator

./: .env.example  .gitignore  CLAUDE.md  bootstrap-server.sh  deploy.sh  dev.ps1  docker-compose.yml  pytest.ini
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/src/archinator/: __init__.py  api.py  config.py  models.py  server.py
backend/src/archinator/auth/: api_keys.py  models.py
backend/src/archinator/compaction/: compact.py
backend/src/archinator/formatting/: exchange_xml.py  json_fmt.py  mermaid.py  plantuml.py  plantuml_render.py
backend/src/archinator/generation/: pipeline.py  prompts.py  schema.py
backend/src/archinator/knowledge/: core.py  rag.py
backend/src/archinator/validation/: rules.py  validator.py
data/: rules_core.md  semantic_core.md  sources.txt
deploy/: Caddyfile
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  config.ts  main.tsx  types.ts
frontend/src/components/: ApiKeyModal.tsx  OutputViewer.tsx  QueryForm.tsx  ResultPanel.tsx  ViolationList.tsx
frontend/src/hooks/: useApiKey.ts
frontend/src/pages/: AdminPage.tsx  GeneratorPage.tsx
scripts/: bootstrap.py  inspect_chroma.py
tests/: test_compaction.py  test_formatting.py  test_mcp_server.py  test_validation.py
training/: bootstrap.py  eval_embeddings.py  render_rules_md.py  requirements.txt
training/training_data/: sources.txt
training/training_data/eval/: queries.jsonl
